--- a/src/builder/templates/md.template
+++ b/src/builder/templates/md.template
@@ -30,7 +30,7 @@
 
 `${input}`: input
 
-### [Try it Online Now!](https://sai.onl/lang_bridge/try/index.html#${language})
+### [Try it Online Now!](https://sai.onl/lang_bridge/try#${language})
 
 ## JS Examples
 
