Fix Keywords & Sample Variables
Enabling variable name translations should make the examples more
readable to speakers of the local language.

--- a/dicts/telugu.conf
+++ b/dicts/telugu.conf
@@ -1,15 +1,15 @@
-if=ayite
-else=mari
+if=okavela
+else=lekunte
 while=unnapudu
 print=cheppu
-return=tirigi
+return=pampinchu
 break=aapu
-continue=konasagincu
+continue=konasaginchu
 true=nijam
 false=tappu
 do=cheyyu
-var=nilva
-null=khali
+var=gurthunchuko
+null=khaali
 function=pani
-for=kosam
-input=adagu
+for=prathi
+input=adugu
