Add Language Support for async-await with E.g.

--- a/dicts/arabic.conf
+++ b/dicts/arabic.conf
@@ -13,3 +13,8 @@ null=farigh
 function=eamil
 for=iilaa
 input=bisal
+async=ghayr_mutazamin
+await=antazir
+new=jadid
+promise=Yueadu
+exec_after=alqiam_baed
