--- a/dicts/kannada.conf
+++ b/dicts/kannada.conf
@@ -7,9 +7,14 @@ break=nilisu
 continue=muduvarisi
 true=sari
 false=thapu
-do=madu
+do=maadu
 var=nenapu
 null=khali
 function=kelsa
 for=lup
 input=kelu
+async=asamakalika
+await=nirikshisi
+new=hosa
+promise=Bharavase
+exec_after=nantara_maadi
