--- a/dicts/malayalam.conf
+++ b/dicts/malayalam.conf
@@ -13,3 +13,8 @@ null=illatha
 function=joli
 for=lup
 input=chodiki
+async=asamanvitha
+await=kaathirikku
+new=puthiya
+promise=Vaagdaanam
+exec_after=pinneede
