--- a/dicts/telugu.conf
+++ b/dicts/telugu.conf
@@ -13,3 +13,8 @@ null=khaali
 function=pani
 for=prathi
 input=adugu
+async=samakalikarana
+await=veci_undandi
+new=kotta
+promise=Vagdanam
+exec_after=amalu_tarvata
