Update Kannada Keywords & Translations

--- a/dicts/kannada.conf
+++ b/dicts/kannada.conf
@@ -1,20 +1,20 @@
-if=nijavidre
+if=ondu_vele
 else=athava
-while=nijvaga
+while=nijvagiruvaga
 print=helu
-return=kodu
-break=nilisu
-continue=muduvarisi
+return=hintirugu
+break=nillisu
+continue=munduvarisi
 true=sari
-false=thapu
+false=thappu
 do=maadu
 var=nenapu
-null=khali
+null=khaali
 function=kelsa
-for=lup
+for=prathi
 input=kelu
 async=asamakalika
 await=nirikshisi
 new=hosa
-promise=Bharavase
+promise=Aane
 exec_after=nantara_maadi
